<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activities.profile.UserProfileActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:padding="24dp">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/birth_date"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/occupation"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/city"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/country"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/phonenumber"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/age"
                android:textSize="16sp"
                android:textColor="@color/white"/>


            <TextView
                android:id="@+id/textMartialStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/martial_status"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Edit"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/logout" />
            </LinearLayout>



        </LinearLayout>
</LinearLayout>