<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activities.profile.EditUserProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"

        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/birth_date"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/textOccupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/occupation"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/country"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/phonenumber"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textMartialStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/martial_status"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/backButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/back"
                android:textColor="#5C6BC0"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="#5C6BC0"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>



    </LinearLayout>
</LinearLayout>